@@ -7,16 +7,17 @@
 
 Recent code snapshot
 ~~~~~~~~~~~~~~~~~~~~
-*) Task partielly done, to be continued.
+*) Task partially done, to be continued.
 
 For the next release build done:
 
 1.) Bugfixing:
 
 [!] Lot of bugs fixed (see Changelog).
-[!] Compiler warnings fixed. *)
+[!] Compiler warnings MinGW 64 bit fixed.
 [!] More sample programs are running now.
 [!] Build scripts for many compilers updated.
+[!] Better improvement for build with hbmk2 utility.
 
 2.) New features and functions
 
@@ -25,18 +26,17 @@ For the next release build done:
 [+] National Language Support (NLS) for internal HWGUI dialogs added. *)
 [+] Added some special helpful standalone functions (Get UTC time and date, ...).
 [*] Some "Windows only" functions ported to GTK, improvement for GTK. 
-[+] Support for MinGW64, first issue. *)
+[+] Support for MinGW64.
 [+] Missing build scripts for MinGW64 added.
-    Need to fix a lot of compile warnings, will be done as soon as possible.
-    Also need to deliver build scripts for utils and contrib libraries.
 [+] Sample database with one field of every type.
 [+] Ressources can be inserted into exe file by hex values.
 [+] Sample program added: 
     Class HGT for combined usage of HWGUI control elements in 
     Harbour gtwvg programs in multithread mode. (testhgt.prg),
     (Windows only), TNX José M. C. Quintas.
-[+] Test program for multithread demo in "test"
-
+[+] Test program for multithread demo in "test".
+[+] Some more sample programs added.
+[+] Documentation extended.
 
 
 HWGUI 2.22 build 4 ( 26.04.2019 )
